@startuml
class Usuario{
    + String nome
    + String CPF
    + String endereco
    + String login
    + String senha
}
class Aluno {
    + String email
    + String RG
    + String endereco
    + String instituicao
    + String curso
    
}

class Professor {
    + String departamento
    + short saldo
    + enviarMoeda(aluno: Aluno, moeda: Moeda): void
    + consultarSaldo(): void
}

class EmpresaParceira {
    + String descricao
    + List<Vantagem> vantagens
    
    + consultarTrocas(): void
}

class Vantagem {
    + String descricao
    + short custo
    + EmpresaParceira empresa
+ cadastrarVantagem(vantagem: Vantagem): void
}


class Resgate{
    + Vantagem vantagem
    + Aluno aluno
    + tracao valor
    + Date data
    + notificar() void
+ resgatarVantagem(vantagem: Vantagem): void
}

class Transacao {
    + short valor
    +String mensagem
    + Aluno aluno
    + Professor professor
    + Date data
    + notificar() void
}

Usuario <|-- Aluno
Usuario <|-- Professor
Usuario <|-- EmpresaParceira
Aluno "1" -- "*" Transacao : recebe
Professor "1" -- "*" Transacao : envia
EmpresaParceira "1" -- "*" Vantagem : oferece
Aluno "1" -- "*" Resgate : realiza
Vantagem "1" -- "*" Resgate : é resgatada

@enduml
